--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <body>
     <header>
-        <h1>Our Tiny Gallery</h1>
+        <h1 id="logo">Our Tiny Gallery</h1>
+        <h2 id="motto">
+            Sweet pictures to feast your eyes :)
+        </h2>
         <nav>
             <ul>
                 <li>
