Add menu styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Sweet pictures to feast your eyes :)
         </h2>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="index.html" aria-label="Go to main page">Home</a>
                 </li>
