--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" aria-label="Go to main page">Home</a>
+                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
                 </li>
                 <li>
                     <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
