--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <header>
-        <h1 id="logo">Our Tiny Gallery</h1>
-        <h2 id="motto">
-            Sweet pictures to feast your eyes :)
-        </h2>
+        <div id="logo-bg">
+            <h1 id="logo">Our Tiny Gallery</h1>
+            <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
+        </div>
         <nav>
             <ul id="menu">
                 <li>
