Add style to h2 in first section of body

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
         </nav>
     </header>
 
-    <section id="site-idea">
-        <h2>Everyone can dance and draw...</h2>
+    <section>
+        <h2 id="site-idea" class="text-center">Everyone can dance and draw...<br>
+            ...however, with varying degrees of skill.  😀<br></h2>
         <div class="row">
             <div class="column" style="background-color:#FFB695;">
-<p> ...however, with varying degrees of skill. 😁<br>
+<p> 
     This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as she sees it. Julia Nikolaevna Vasilenko
      took her creative pseudonym Juniva - according to the first couple of letters of her full name. Juniva is self-taught, she took master 
      classes from various artists, but she does not have a systematic art education. He paints only by inspiration, in a good mood, and believes
