--- a/index.html
+++ b/index.html
@@ -45,25 +45,26 @@
         <h2 id="site-idea" class="text-center">Everyone can dance and draw...<br>
             ...however, with varying degrees of skill.  😀<br></h2>
         <div class="row">
-            <div class="column" style="background-color:#FFB695;">
+            <div class="column column-left" >
 <p> 
-    This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as she sees it. Julia Nikolaevna Vasilenko
-     took her creative pseudonym Juniva - according to the first couple of letters of her full name. Juniva is self-taught, she took master 
+        This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as she sees it. <br> 
+        Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of letters of her full name. Juniva is self-taught, she took master 
      classes from various artists, but she does not have a systematic art education. He paints only by inspiration, in a good mood, and believes
-      that this state is transmitted to the audience.
+      that this state is transmitted to the audience. <br><br>
 
     It cannot be said that Julia loved to paint since childhood. She did not have any special talents for painting, but it is interesting that 
-    the only drawing that has survived since then is a red cat on a red background, painted in gouache. Definitely, cats and especially the 
-    expression of their eyes is what inspires the artist to create and causes approval from her friends.
-
+    the only drawing that has survived since then is a red cat 
 </p>
              </div>
-            <div class="column" style="background-color:#96D1CD;"> 
-<p>Juniva's creative research has several time periods. The first period of active creativity fell on 1982-1985, and the last one began
-     a couple of years ago, in 2020. In the interim, only a few paintings were painted.
+             <div class="column column-right"> 
+               
+            
+<p> on a red background, painted in gouache. Definitely, cats and especially the 
+    expression of their eyes is what inspires the artist to create and causes approval from her friends.<br> Juniva's creative research has several time periods. The first period of active creativity fell on 1982-1985, and the last one began
+     a couple of years ago, in 2020. In the interim, only a few paintings were painted.<br><br>
 
     The following are three thematic albums - animals, landscapes and flowers. We suggest clicking on the album cover or the link below 
-    it to view the pictures. We hope they will leave you with only pleasant impressions.</p>
+    it to view the pictures. We hope they will leave you with only pleasant impressions. <br></p>
              </div>
         </div>
     </section>
