Add cover images to Albums section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
                 </li>
                 <li>
-                    <a href="contacts.html" aria-label="Contact us">Contacts</a>
+                    <a href="#footer" aria-label="Contact us">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -77,9 +77,10 @@
     </section>
     <section>
         <h2 class="text-center"> Albums of paintings</h2>
+        
         <div class="album">
             <span class="cover">
-                <a href="animals.html" aria-label="Go to Animal Album"><img src="assets/images/blue-eyed.jpg"
+                <a href="animals.html" aria-label="Go to Animal Album"><img src="assets/images/cover-animal.jpg"
                         alt="Animals Album">
                     <h2>Animals Album</h2>
                 </a>
@@ -89,8 +90,8 @@
 
         <div class="album">
             <span class="cover">
-                <a href="landscapes.html" aria-label="Go to Landscapes Album"><img src="assets/images/eyeof-light.jpg"
-                        height=322px; alt="Landscapes Album">
+                <a href="landscapes.html" aria-label="Go to Landscapes Album"><img src="assets/images/cover-land.jpg"
+                          alt="Landscapes Album">
                     <h2>Landscapes Album</h2>
                 </a>
             </span>
@@ -98,19 +99,20 @@
 
         <div class="album">
             <span class="cover">
-                <a href="flowers.html" aria-label="Go to Flowers Album"><img src="assets/images/flower-cover.jpg"
-                        height=322px; alt="Flowers Album">
+                <a href="flowers.html" aria-label="Go to Flowers Album"><img src="assets/images/cover-flower.jpg"
+                         alt="Flowers Album">
                     <h2>Flowers Album</h2>
                 </a>
             </span>
         </div>
+
     </section>
-    <section>
+    <section class="clear">
         Text about following video
     </section>
 
-    <footer>
-
+    <footer class="clear" id="footer">
+Here in footer will be the  contact information.
     </footer>
 
 
