--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="column column-left">
                 <p>
-                    This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as
+                    &nbsp;&nbsp;&nbsp; This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as
                     she sees it. <br>
                     Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of
                     letters of her full name. Juniva is self-taught, she took master
@@ -55,21 +55,23 @@
                     inspiration, in a good mood, and believes
                     that this state is transmitted to the audience. <br><br>
 
-                    It cannot be said that Julia loved to paint since childhood. She did not have any special talents
+                    &nbsp;&nbsp;&nbsp;It cannot be said that Julia loved to paint since childhood. She did not have any special talents
                     for painting, but it is interesting that
-                    the only drawing that has survived since then is a red cat
+                    the only drawing that has survived since then is a red cat on a red background, painted in gouache.
                 </p>
             </div>
             <div class="column column-right">
 
 
-                <p> on a red background, painted in gouache. Definitely, cats and especially the
+                <p>  &nbsp;&nbsp;&nbsp;Definitely, cats and especially the
                     expression of their eyes is what inspires the artist to create and causes approval from her
-                    friends.<br> Juniva's creative research has several time periods. The first period of active
+                    friends.<br> <br>
+                    
+                    &nbsp;&nbsp;&nbsp;Juniva's creative research has several time periods. The first period of active
                     creativity fell on 1982-1985, and the last one began
                     a couple of years ago, in 2020. In the interim, only a few paintings were painted.<br><br>
 
-                    The following are three thematic albums - animals, landscapes and flowers. We suggest clicking on
+                    &nbsp;&nbsp;&nbsp;The following are three thematic albums - animals, landscapes and flowers. We suggest clicking on
                     the album cover or the link below
                     it to view the pictures. We hope they will leave you with only pleasant impressions. <br></p>
             </div>
@@ -108,7 +110,13 @@
 
     </section>
     <section class="clear">
-        Text about following video
+        &nbsp;&nbsp;&nbsp;Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives tutorials and shows you how
+         to paint a picture step by step, it's very easy to follow. You may not be able to draw as fast as a professional artist, but 
+         the main thing is the result, and it will definitely turn out good, and most importantly, a lot of fun from the creative process itself!
+
+         &nbsp;&nbsp;&nbsp;Below are videos of master classes by excellent artists, according to which some of Juniva's paintings were painted. You can turn on
+         captions translated into your native language in the video settings. To do this, click on the gear at the bottom of the video that 
+         stands for Settings, select Subtitles > Translate > and select your language.
     </section>
 
     <footer class="clear" id="footer">
