Delete indents in text

--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
             ...however, with varying degrees of skill. 😀<br></h2>
         <div class="row">
             <div class="column column-left">
-                <p>
-                    &nbsp;&nbsp;&nbsp; This site presents the artistic creativity of a simple Ukrainian woman and her concept of beauty as
-                    she sees it. <br>
-                    Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of
+                <p> 
+                     This site presents the artistic creativity of a simple Ukrainian woman and her
+                    concept of beauty as
+                    she sees it. </p><br><br>
+
+                <p>    Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of
                     letters of her full name. Juniva is self-taught, she took master
                     classes from various artists, but she does not have a systematic art education. He paints only by
                     inspiration, in a good mood, and believes
-                    that this state is transmitted to the audience. <br><br>
+                    that this state is transmitted to the audience.</p> <br><br>
 
-                    &nbsp;&nbsp;&nbsp;It cannot be said that Julia loved to paint since childhood. She did not have any special talents
+                <p>  It cannot be said that Julia loved to paint since childhood. She did not have any
+                    special talents
                     for painting, but it is interesting that
                     the only drawing that has survived since then is a red cat on a red background, painted in gouache.
                 </p>
@@ -63,15 +66,16 @@
             <div class="column column-right">
 
 
-                <p>  &nbsp;&nbsp;&nbsp;Definitely, cats and especially the
+                <p>  Definitely, cats and especially the
                     expression of their eyes is what inspires the artist to create and causes approval from her
-                    friends.<br> <br>
-                    
-                    &nbsp;&nbsp;&nbsp;Juniva's creative research has several time periods. The first period of active
+                    friends.</p><br> <br>
+ 
+                <p>   Juniva's creative research has several time periods. The first period of active
                     creativity fell on 1982-1985, and the last one began
-                    a couple of years ago, in 2020. In the interim, only a few paintings were painted.<br><br>
+                    a couple of years ago, in 2020. In the interim, only a few paintings were painted.</p><br><br>
 
-                    &nbsp;&nbsp;&nbsp;The following are three thematic albums - animals, landscapes and flowers. We suggest clicking on
+                <p>   The following are three thematic albums - animals, landscapes and flowers. We
+                    suggest clicking on
                     the album cover or the link below
                     it to view the pictures. We hope they will leave you with only pleasant impressions. <br></p>
             </div>
@@ -93,7 +97,7 @@
         <div class="album">
             <span class="cover">
                 <a href="landscapes.html" aria-label="Go to Landscapes Album"><img src="assets/images/cover-land.jpg"
-                          alt="Landscapes Album">
+                        alt="Landscapes Album">
                     <h3>Landscapes Album</h3>
                 </a>
             </span>
@@ -102,7 +106,7 @@
         <div class="album">
             <span class="cover">
                 <a href="flowers.html" aria-label="Go to Flowers Album"><img src="assets/images/cover-flower.jpg"
-                         alt="Flowers Album">
+                        alt="Flowers Album">
                     <h3>Flowers Album</h3>
                 </a>
             </span>
@@ -110,17 +114,35 @@
 
     </section>
     <section class="clear">
-        &nbsp;&nbsp;&nbsp;Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives tutorials and shows you how
-         to paint a picture step by step, it's very easy to follow. You may not be able to draw as fast as a professional artist, but 
-         the main thing is the result, and it will definitely turn out good, and most importantly, a lot of fun from the creative process itself!
+        <h2 id="site-idea" class="text-center">Follow masters.<br>
+            Do better than they do! 😀👌<br></h2>
+        <div class="row">
+            <div class="column column-left">
+                <p>
+                    Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives
+                    tutorials and shows you how
+                    to paint a picture step by step, it's very easy to follow. You may not be able to draw as fast as a
+                    professional artist, but
+                    the main thing is the result, and it will definitely turn out good, and most importantly, a lot of
+                    fun from the creative process itself!
+                </p>
+            </div>
 
-         &nbsp;&nbsp;&nbsp;Below are videos of master classes by excellent artists, according to which some of Juniva's paintings were painted. You can turn on
-         captions translated into your native language in the video settings. To do this, click on the gear at the bottom of the video that 
-         stands for Settings, select Subtitles > Translate > and select your language.
+            <div class="column column-right">
+                
+
+                <p>   Below are videos of master classes by excellent artists, according to which some of Juniva's
+                    paintings were painted. You can turn on
+                    captions translated into your native language in the video settings. To do this, click on the gear
+                    at the bottom of the video that
+                    stands for Settings, select Subtitles > Translate > and select your language.
+                </p>
+            </div>
+        </div>
     </section>
 
     <footer class="clear" id="footer">
-Here in footer will be the  contact information.
+        Here in footer will be the contact information.
     </footer>
 
 
