Add background to footer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2 class="text-center"> Albums of paintings</h2>
 
         <div class="album">
-            <span class="cover">
+            <span>
                 <a href="animals.html" aria-label="Go to Animal Album"><img src="assets/images/cover-animal.jpg"
                         alt="Animals Album">
                     <h3>Animals Album</h3>
@@ -95,7 +95,7 @@
 
 
         <div class="album">
-            <span class="cover">
+            <span >
                 <a href="landscapes.html" aria-label="Go to Landscapes Album"><img src="assets/images/cover-land.jpg"
                         alt="Landscapes Album">
                     <h3>Landscapes Album</h3>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="album">
-            <span class="cover">
+            <span >
                 <a href="flowers.html" aria-label="Go to Flowers Album"><img src="assets/images/cover-flower.jpg"
                         alt="Flowers Album">
                     <h3>Flowers Album</h3>
@@ -140,8 +140,21 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="album">
+            <span>
+                <iframe src="https://youtu.be/Epi_L4Mrnmg" title="Webinar on Painting by JOHN SINGER SARGENT"></iframe>
+                 
+            </span>
+           
+            <span> <iframe src="https://youtu.be/guKf2rSqzA8" title="Webinar on Painting by Olga Bazanova- Sailboat"></iframe></span>
+        </div>
+    </section>
 
-    <footer class="clear" id="footer">
+    <footer class="clear contacts" id="footer">
+        <div>
+
+        </div>
         Here in footer will be the contact information.
     </footer>
 
