--- a/animals.html
+++ b/animals.html
@@ -1,1 +1,59 @@
-<h2>Animals</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Online gallery for the painter Juniva">
+    <meta name="keywords"
+        content="realistic art, abstract art, painter, artist, painting, paintings, cat picture, flower painting, animal paintings">
+    <meta name="author" content="Juniva">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Animals Album</title>
+</head>
+
+<body>
+    <header>
+        <div id="logo-bg">
+            <h1 id="logo">Animals Album</h1>
+            <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
+        </div>
+
+    
+    <nav>
+        <ul id="menu">
+            <li>
+                <a href="index.html"  aria-label="Go to main page">Home</a>
+            </li>
+            <li>
+                <a href="animals.html" class="active" aria-label="Go to paintings with animals">Animals</a>
+            </li>
+            <li>
+                <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
+            </li>
+            
+            <li>
+                <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
+            </li>
+            <li>
+                <a href="#footer" aria-label="Contact us">Contacts</a>
+            </li>
+        </ul>
+    </nav>
+</head>
+
+<body>
+    <header>
+    </header>
+    <footer class="clear contacts" id="footer">
+        <div>
+
+        </div>
+        Here in footer will be the contact information.
+    </footer>
+
+</body>
+
+</html>
