Add 3rd row images to animals page

--- a/animals.html
+++ b/animals.html
@@ -105,6 +105,33 @@
 
     </section><br>
 
+    <!--Third row of animal paintings -->
+    <section>
+
+        <div class="album">             
+                <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
+                <h3>Lubava the kitty</h3>
+                <p>Oil paint on canvas, size 40x40cm. 2020.</p>           
+            <hr>
+        </div>
+
+        <div class="album">            
+                <img src="assets/images/ryzhik.jpg" alt="Red green-eyed cat, very nice">
+                <h3>Ryzhyk</h3>
+                <p>Oil paint on canvas, size 20x20cm. 2022.</p>           
+            <hr>
+        </div>
+        <div class="album">           
+                <img src="assets/images/kitty.jpg" alt="Grey kitty">
+                <h3>Kitty</h3>
+                <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>        
+            <hr>
+        </div>
+
+
+
+    </section><br>
+
     <footer class="clear contacts" id="footer">
         <div>
 
