Add images to assets/images and 4th row of images to animals page

--- a/animals.html
+++ b/animals.html
@@ -45,10 +45,8 @@
         </nav>
     </header>
 
-
-
-
     <!--  1st row of animal paintings -->
+
     <section>
 
         <div class="album">
@@ -106,25 +104,51 @@
     </section><br>
 
     <!--Third row of animal paintings -->
+
     <section>
 
-        <div class="album">             
-                <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
-                <h3>Lubava the kitty</h3>
-                <p>Oil paint on canvas, size 40x40cm. 2020.</p>           
+        <div class="album">
+            <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
+            <h3>Lubava the kitty</h3>
+            <p>Oil paint on canvas, size 40x40cm. 2020.</p>
             <hr>
         </div>
 
-        <div class="album">            
-                <img src="assets/images/ryzhik.jpg" alt="Red green-eyed cat, very nice">
-                <h3>Ryzhyk</h3>
-                <p>Oil paint on canvas, size 20x20cm. 2022.</p>           
+        <div class="album">
+            <img src="assets/images/ryzhik.jpg" alt="Red green-eyed cat, very nice">
+            <h3>Ryzhyk</h3>
+            <p>Oil paint on canvas, size 20x20cm. 2022.</p>
             <hr>
         </div>
-        <div class="album">           
-                <img src="assets/images/kitty.jpg" alt="Grey kitty">
-                <h3>Kitty</h3>
-                <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>        
+        <div class="album">
+            <img src="assets/images/kitty.jpg" alt="Grey kitty">
+            <h3>Kitty</h3>
+            <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+    <!--4th row of animal paintings -->
+
+    <section>
+
+        <div class="album">
+                <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
+                <h3>White kitty with a pink bow</h3>
+                <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <hr>
+        </div>
+
+        <div class="album"> 
+                <img src="assets/images/bantik2.jpg" alt="White kitty with a pink bow-2">
+                <h3>White kitty with a pink bow-2</h3>
+                <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <hr>
+        </div>
+        <div class="album"> 
+                <img src="assets/images/bantik3.jpg" alt="White kitty with a pink bow-2">
+                <h3>White kitty with a pink bow-3</h3>
+                <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
 
