Add 5th row images to animals page

--- a/animals.html
+++ b/animals.html
@@ -133,27 +133,48 @@
     <section>
 
         <div class="album">
-                <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
-                <h3>White kitty with a pink bow</h3>
-                <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
+            <h3>White kitty with a pink bow</h3>
+            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
 
-        <div class="album"> 
-                <img src="assets/images/bantik2.jpg" alt="White kitty with a pink bow-2">
-                <h3>White kitty with a pink bow-2</h3>
-                <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+        <div class="album">
+            <img src="assets/images/bantik2.jpg" alt="White kitty with a pink bow-2">
+            <h3>White kitty with a pink bow-2</h3>
+            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
             <hr>
         </div>
-        <div class="album"> 
-                <img src="assets/images/bantik3.jpg" alt="White kitty with a pink bow-2">
-                <h3>White kitty with a pink bow-3</h3>
-                <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+        <div class="album">
+            <img src="assets/images/bantik3.jpg" alt="White kitty with a pink bow-2">
+            <h3>White kitty with a pink bow-3</h3>
+            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+    <!--  5th row of animal paintings -->
+    
+    <section>
+        <div class="album">
+            <img src="assets/images/belka-tulip.jpg" alt="Squirrel with a tulip.">
+            <h3>Squirrel with a tulip</h3>
+            <p>Oil paint on canvas, size 20x30cm. 2021.</p>
             <hr>
         </div>
 
-
-
+        <div class="album">
+            <img src="assets/images/stroboscop.jpg" alt="A cat">
+            <h3>Stop music (my kitty dances with another cat)</h3>
+            <p>Oil paint on canvas, size 25x35cm. 2021.</p>
+            <hr>
+        </div>
+        <div class="album">
+            <img src="assets/images/tiger18x24.jpg" alt="Tiger">
+            <h3>Tiger</h3>
+            <p>Oil paint on canvas, size 18x24cm. 2021.</p>
+            <hr>
+        </div>
     </section><br>
 
     <footer class="clear contacts" id="footer">
