Add 6th row of images to animals page

--- a/animals.html
+++ b/animals.html
@@ -154,7 +154,7 @@
     </section><br>
 
     <!--  5th row of animal paintings -->
-    
+
     <section>
         <div class="album">
             <img src="assets/images/belka-tulip.jpg" alt="Squirrel with a tulip.">
@@ -176,6 +176,32 @@
             <hr>
         </div>
     </section><br>
+
+    <!--  6th row of paintings -->  
+
+<section>     
+    <div class="album">    
+       <img src="assets/images/tigercub.jpg" alt="Tigercub">
+          <h3>Tigercub</h3>
+                <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+             </details>
+             <hr>
+    </div>
+ 
+    <div class="album">              
+           <img src="assets/images/hunter15x15.jpg" alt="Kitty-hunter">
+              <h3>Kitty-hunter</h3>
+                    <p>Oil paint on canvas, size 15x15cm. 2021.</p>
+            <hr>
+    </div>
+    <div class="album">
+             <span class="cover"> 
+              <img src="assets/images/hunter20x20.jpg"  alt="Kitty-hunter-2">
+                 <h3>Kitty-hunter-2</h3>
+                   <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+              <hr>
+    </div>      
+ </section><br>
 
     <footer class="clear contacts" id="footer">
         <div>
