Add 7th and 8th rows of images to animals page

--- a/animals.html
+++ b/animals.html
@@ -177,31 +177,81 @@
         </div>
     </section><br>
 
-    <!--  6th row of paintings -->  
+    <!--  6th row of animal paintings -->
 
-<section>     
-    <div class="album">    
-       <img src="assets/images/tigercub.jpg" alt="Tigercub">
-          <h3>Tigercub</h3>
-                <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-             </details>
-             <hr>
-    </div>
- 
-    <div class="album">              
-           <img src="assets/images/hunter15x15.jpg" alt="Kitty-hunter">
-              <h3>Kitty-hunter</h3>
-                    <p>Oil paint on canvas, size 15x15cm. 2021.</p>
+    <section>
+        <div class="album">
+            <img src="assets/images/tigercub.jpg" alt="Tigercub">
+            <h3>Tigercub</h3>
+            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            </details>
             <hr>
-    </div>
-    <div class="album">
-             <span class="cover"> 
-              <img src="assets/images/hunter20x20.jpg"  alt="Kitty-hunter-2">
-                 <h3>Kitty-hunter-2</h3>
-                   <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-              <hr>
-    </div>      
- </section><br>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/hunter15x15.jpg" alt="Kitty-hunter">
+            <h3>Kitty-hunter</h3>
+            <p>Oil paint on canvas, size 15x15cm. 2021.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/hunter20x20.jpg" alt="Kitty-hunter-2">
+            <h3>Kitty-hunter-2</h3>
+            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+    <!--  7th row of animal paintings -->
+
+    <section>
+        <div class="album">
+            <img src="assets/images/kitten1.jpg" alt="Grey kitten-1">
+            <h3>Kitten-1</h3>
+            <p>Oil paint on canvas, size 18x24cm. 2021.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/kitten2.jpg" alt="Grey kitten-2">
+            <h3>Kitten-2</h3>
+            <p>Oil paint on canvas, size 20x30cm. 2021.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src=" assets/images/kitten3.jpg" alt="Grey kitten-3">
+            <h3>Kitten-3</h3>
+            <p>Oil paint on canvas, size 18x24cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+    <!--  8th row of animal paintings -->
+
+    <section>
+        <div class="album">
+            <img src="assets/images/cat.jpg" alt="A cat">
+            <h3>Cat</h3>
+            <p>Watercolor on paper, size 30x44cm. 1982.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/ulibaka.jpg" alt="Smiling cat">
+            <h3> Smiling cat</h3>
+            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <hr>
+        </div>
+        <div class="album">
+            <img src="assets/images/toshka.jpg" alt="Toshka the Marmot">
+            <h3>Toshka the Marmot</h3>
+            <p>Oil paint on canvas, size 15x20cm. Toshka the Marmot has own channel on <a
+                    href="http://youtu.be/_9eOswLg5mQ" target="_blank" rel="noopener">Youtube</a></p>
+            <hr>
+        </div>
+    </section><br>
 
     <footer class="clear contacts" id="footer">
         <div>
