--- a/animals.html
+++ b/animals.html
@@ -253,6 +253,27 @@
         </div>
     </section><br>
 
+    <!--  9th row of animal paintings -->
+
+    <section>
+
+        <div class="album">
+            <img src="assets/images/belka-win.jpg" alt="Squirrel in Winter">
+            <h3>Squirrel in Winter</h3>
+            <p>Oil paint on canvas, size 35x45cm. 2022.</p>
+            <hr>
+        </div>
+
+        </div>
+        <div class="album">
+            <img src="assets/images/red-ball.jpg" alt="Kitten with a red ball">
+            <h3>Red ball</h3>
+            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+
     <footer class="clear contacts" id="footer">
         <div>
 
