Add cover images and links to YouTube videos in masterclass section on main page

--- a/animals.html
+++ b/animals.html
@@ -273,6 +273,8 @@
         </div>
     </section><br>
 
+    <p class="text-center">That is all so far. 😉 </p>
+
 
     <footer class="clear contacts" id="footer">
         <div>
