--- a/animals.html
+++ b/animals.html
@@ -184,7 +184,7 @@
             <img src="assets/images/tigercub.jpg" alt="Tigercub">
             <h3>Tigercub</h3>
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-            </details>
+             
             <hr>
         </div>
 
@@ -264,7 +264,7 @@
             <hr>
         </div>
 
-        </div>
+         
         <div class="album">
             <img src="assets/images/red-ball.jpg" alt="Kitten with a red ball">
             <h3>Red ball</h3>
@@ -273,7 +273,7 @@
         </div>
     </section><br>
 
-    <p class="text-center">That is all so far. 😉 </p>
+    <p class="text-center">That is all so far. 😉 </p><br>
 
 
     <footer class="clear contacts" id="footer">
