Add footer to animal page

--- a/animals.html
+++ b/animals.html
@@ -276,13 +276,20 @@
     <p class="text-center">That is all so far. 😉 </p><br>
 
 
-    <footer class="clear contacts" id="footer">
-        <div>
+  <!--  Footer the same as on the main page -->
 
-        </div>
-        Here in footer will be the contact information.
-    </footer>
+  <footer class="clear contacts" id="footer">
+    <div class="text-center">
+        You can see more Juniva's paintings on  <i class="fa-brands fa-instagram-square"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
+        If you have question or offers please contact Juniva by Direct in Instagram.<br>
+        Copyright Juniva 2020.
+    </div>
+    
+</footer>
 
+<!--  Fontawesome script  -->
+
+<script src="https://kit.fontawesome.com/2e9af526bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
