Add 1st row of images to landscape page

--- a/landscapes.html
+++ b/landscapes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Online gallery for the painter Juniva">
     <meta name="keywords"
-        content="realistic art, abstract art, painter, artist, painting, paintings, cat picture, flower painting, animal paintings">
+        content="realistic art, abstract art, painter, artist, painting, paintings, cat picture, flower painting, landscape paintings">
     <meta name="author" content="Juniva">
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -38,43 +38,42 @@
                     <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
                 </li>
                 <li>
-                    <a href="#footer" aria-label="Contact us">Contacts</a>
+                    <a href="#footer" aria-label="Find us and contact us on Instagram">Contacts</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!--  1st row of animal paintings -->
+    <!--  1st row of landscape paintings -->
 
     <section>
 
         <div class="album">
-            <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
-            <h3>Blue-eyed kitty</h3>
-            <p>Oil paint on canvas, size 30x20cm. 2022.</p>
+            <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
+            <h3>Breakfast at the sea</h3>
+            <p>Oil paint on canvas, size 50x50cm. 2021.</p>
 
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/two-cats.jpg" alt="blue-eyed kitty">
-            <h3>Two Blue-eyed kitties</h3>
-            <p>They are two different paintings. <br> Oil paint on canvas, size 20x30cm. 2022.</p>
+            <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
+            <h3>Poppies near the sea</h3>
+            <p>Oil paint on canvas, size 30x30cm. 2021.</p>
 
             <hr>
         </div>
         <div class="album">
-            <img src="assets/images/turquoise.jpg" alt="Turquoise-eyed cat,very nice">
-            <h3>Turquoise</h3>
-            <p>Oil paint, canvas on cardboard, size 15x10cm. Juniva's copy of image from the Internet. Author is
-                unknown. 2022.</p>
+            <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
+            <h3>Rocks</h3>
+            <p>Oil paint, laminate, size 18x19cm. 2021.</p>
 
             <hr>
         </div>
 
     </section><br>
 
-    <!-- Second row of animal paintings -->
+    <!-- Second row of landscape paintings -->
 
     <section>
 
@@ -102,7 +101,7 @@
 
     </section><br>
 
-    <!--Third row of animal paintings -->
+    <!--Third row of landscape paintings -->
 
     <section>
 
@@ -127,7 +126,7 @@
         </div>
     </section><br>
 
-    <!--4th row of animal paintings -->
+    <!--4th row of landscape paintings -->
 
     <section>
 
@@ -152,7 +151,7 @@
         </div>
     </section><br>
 
-    <!--  5th row of animal paintings -->
+    <!--  5th row of landscape paintings -->
 
     <section>
         <div class="album">
@@ -176,7 +175,7 @@
         </div>
     </section><br>
 
-    <!--  6th row of animal paintings -->
+    <!--  6th row of landscape paintings -->
 
     <section>
         <div class="album">
@@ -202,7 +201,7 @@
         </div>
     </section><br>
 
-    <!--  7th row of animal paintings -->
+    <!--  7th row of landscape paintings -->
 
     <section>
         <div class="album">
@@ -227,7 +226,7 @@
         </div>
     </section><br>
 
-    <!--  8th row of animal paintings -->
+    <!--  8th row of landscape paintings -->
 
     <section>
         <div class="album">
@@ -252,7 +251,7 @@
         </div>
     </section><br>
 
-    <!--  9th row of animal paintings -->
+    <!--  9th row of landscape paintings -->
 
     <section>
 
