Add 2nd row of images to lanscape page

--- a/landscapes.html
+++ b/landscapes.html
@@ -76,25 +76,27 @@
     <!-- Second row of landscape paintings -->
 
     <section>
+        <p class="text-center">Three copies were painted by the friend's request and all three looks a little different.
+             Paintings were done by Olga Bazanova's masterclass in YouTube. </p>
 
         <div class="album">
-            <img src="assets/images/irbis1.jpg" alt="Snow leopard">
-            <h3>Snow leopard-1</h3>
-            <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
+            <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
+            <h3>Saint-Jean-Cap-Ferrat-1</h3>
+            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/irbis2.jpg" alt="Snow leopard">
-            <h3>Snow leopard-2</h3>
-            <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
+            <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
+            <h3>Saint-Jean-Cap-Ferrat-2</h3>
+            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/irbis3.jpg" alt="Snow leopard">
-            <h3>Snow leopard-3</h3>
-            <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
+            <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
+            <h3>Saint-Jean-Cap-Ferrat-3</h3>
+            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
 
         </div>
