Add content and images to landscape page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     it to view the pictures. We hope they will leave you with only pleasant impressions. </p>
             </div>
         </div>
-    </section><br><br>
+    </section>
     <!--  Section with albums on main page -->
     <section>
         <h2 class="text-center"> Albums of paintings</h2>
