--- a/landscapes.html
+++ b/landscapes.html
@@ -51,7 +51,7 @@
         <div class="album">
             <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
             <h3>Breakfast at the sea</h3>
-            <p>Oil paint on canvas, size 50x50cm. 2021.</p>
+            <p>Oil on canvas, size 50x50cm. 2021.</p>
 
             <hr>
         </div>
@@ -59,14 +59,14 @@
         <div class="album">
             <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
             <h3>Poppies near the sea</h3>
-            <p>Oil paint on canvas, size 30x30cm. 2021.</p>
+            <p>Oil on canvas, size 30x30cm. 2021.</p>
 
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
             <h3>Rocks</h3>
-            <p>Oil paint, laminate, size 18x19cm. 2021.</p>
+            <p>Oil on laminate, size 18x19cm. 2021.</p>
 
             <hr>
         </div>
@@ -82,21 +82,21 @@
         <div class="album">
             <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
             <h3>Saint-Jean-Cap-Ferrat-1</h3>
-            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
+            <p>Oil, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
             <h3>Saint-Jean-Cap-Ferrat-2</h3>
-            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
+            <p>Oil, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
             <h3>Saint-Jean-Cap-Ferrat-3</h3>
-            <p>Oil paint, canvas on cardboard,  30x40cm. 2020.</p>
+            <p>Oil, canvas on cardboard,  30x40cm. 2020.</p>
             <hr>
 
         </div>
@@ -106,24 +106,43 @@
     <!--Third row of landscape paintings -->
 
     <section>
+            <div class="row">
+                <div class="column column-left">
+                    <p>
+                        Moonlit Night on the Dnieper by Arkhip Kuindzhi (1880) astonished  his contemporaries. The moonlight streaming from the canvas 
+                        seemed so real that some of the viewers tried to look behind the picture to find a lantern or lamp there.
+                         But there was no lamp. And the colors were the most ordinary, not fluorescent. Just an extraordinary talent of the artist.
+                         Juniva was also inspired by this masterpiece,  and perhaps also by the story of Harry Potter. Thus was born this comic picture,
+                          where mice fly on brooms to
+                    </p> <br><br>
+                </div>
+                <div class="column column-right">
+                        <p>  the Cheese Moon.  And we can only guess about their intentions.😁 <br>
+                
+                            The painting The Return is a copy of a painting by a Soviet artist, published in 1981 on the back cover of the
+                         Yunost magazine. This story impressed the young Juniva and she painted this picture in a larger format. Clumsily,
+                          childishly, she tried to convey the feelings of the astronauts who returned to their native Earth after a long flight into space. </p>
+                </div>
+            </div>
+        </section>
 
         <div class="album">
-            <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
-            <h3>Lubava the kitty</h3>
-            <p>Oil paint on canvas, size 40x40cm. 2020.</p>
+            <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
+            <h3>The Cheese Moon</h3>
+            <p>Oil  on canvas, size 30x40cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/ryzhik.jpg" alt="Red green-eyed cat, very nice">
-            <h3>Ryzhyk</h3>
-            <p>Oil paint on canvas, size 20x20cm. 2022.</p>
+            <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
+            <h3>Fragment of The Cheese Moon.</h3>
+            <p> Oil  on canvas, size 30x40cm. 2021.</p>
             <hr>
         </div>
         <div class="album">
-            <img src="assets/images/kitty.jpg" alt="Grey kitty">
-            <h3>Kitty</h3>
-            <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>
+            <img src="assets/images/returning.jpg" alt="Grey kitty">
+            <h3>The Return.</h3>
+            <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
             <hr>
         </div>
     </section><br>
