Add images to 5th row of landscape page

--- a/landscapes.html
+++ b/landscapes.html
@@ -135,13 +135,13 @@
 
         <div class="album">
             <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
-            <h3>Fragment of The Cheese Moon.</h3>
+            <h3>Fragment of The Cheese Moon</h3>
             <p> Oil  on canvas, size 30x40cm. 2021.</p>
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/returning.jpg" alt="Grey kitty">
-            <h3>The Return.</h3>
+            <h3>The Return</h3>
             <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
             <hr>
         </div>
@@ -152,22 +152,22 @@
     <section>
 
         <div class="album">
-            <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
-            <h3>White kitty with a pink bow</h3>
-            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <img src="assets/images/gurzuf.jpg" alt="Nice picture of the place called Gurzuf with the sea and mountain">
+            <h3>Gurzuf</h3>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/bantik2.jpg" alt="White kitty with a pink bow-2">
-            <h3>White kitty with a pink bow-2</h3>
-            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
+            <h3>Lavender</h3>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
         <div class="album">
-            <img src="assets/images/bantik3.jpg" alt="White kitty with a pink bow-2">
-            <h3>White kitty with a pink bow-3</h3>
-            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
+            <h3>The Eye of Light</h3>
+            <p>Oil on canvas, size 25x35cm. 2022.</p>
             <hr>
         </div>
     </section><br>
